{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 147,
  "lineage": "a0a97a68-6597-9ef7-0fc2-c4b52ff23619",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a11bdf703158664",
            "arn": "arn:aws:ec2:us-east-1:703671893205:elastic-ip/eipalloc-09a11bdf703158664",
            "association_id": "eipassoc-0d707eeda8c5110dd",
            "domain": "vpc",
            "id": "eipalloc-09a11bdf703158664",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0efeb008c279bdd55",
            "private_dns": "ip-10-0-93-109.ec2.internal",
            "private_ip": "10.0.93.109",
            "public_dns": "ec2-18-211-150-202.compute-1.amazonaws.com",
            "public_ip": "18.211.150.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:internet-gateway/igw-087156d44a69224f3",
            "id": "igw-087156d44a69224f3",
            "owner_id": "703671893205",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-038e9f73f3c630665"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a11bdf703158664",
            "association_id": "eipassoc-0d707eeda8c5110dd",
            "connectivity_type": "public",
            "id": "nat-0c2e082406784ba80",
            "network_interface_id": "eni-0efeb008c279bdd55",
            "private_ip": "10.0.93.109",
            "public_ip": "18.211.150.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03edd3b5f8ec8db7b",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            }
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:route-table/rtb-0b4b3951fdd496f18",
            "id": "rtb-0b4b3951fdd496f18",
            "owner_id": "703671893205",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c2e082406784ba80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private"
            },
            "tags_all": {
              "Name": "prod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e9f73f3c630665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:route-table/rtb-085a22ecc5f30156c",
            "id": "rtb-085a22ecc5f30156c",
            "owner_id": "703671893205",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087156d44a69224f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public"
            },
            "tags_all": {
              "Name": "prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e9f73f3c630665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a50966726bcd2bbf",
            "route_table_id": "rtb-0b4b3951fdd496f18",
            "subnet_id": "subnet-06d4acdfbb6caa8b3"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba6d9100d8c0f71d",
            "route_table_id": "rtb-0b4b3951fdd496f18",
            "subnet_id": "subnet-0247012bcb9fc0532"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018d3417f42bb0c1b",
            "route_table_id": "rtb-085a22ecc5f30156c",
            "subnet_id": "subnet-03edd3b5f8ec8db7b"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b50e11ce5a1647b2",
            "route_table_id": "rtb-085a22ecc5f30156c",
            "subnet_id": "subnet-03a4806f8e9b47cac"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:subnet/subnet-06d4acdfbb6caa8b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d4acdfbb6caa8b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671893205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-us-east-1a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "prod-private-us-east-1a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-038e9f73f3c630665"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:subnet/subnet-0247012bcb9fc0532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0247012bcb9fc0532",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671893205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-us-east-1b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "prod-private-us-east-1b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-038e9f73f3c630665"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:subnet/subnet-03edd3b5f8ec8db7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03edd3b5f8ec8db7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671893205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-us-east-1a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-public-us-east-1a",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-038e9f73f3c630665"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:subnet/subnet-03a4806f8e9b47cac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a4806f8e9b47cac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671893205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-us-east-1b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-public-us-east-1b",
              "kubernetes.io/cluster/prod-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-038e9f73f3c630665"
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671893205:vpc/vpc-038e9f73f3c630665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5b524f55a39ece7",
            "default_route_table_id": "rtb-07ff29532512ec906",
            "default_security_group_id": "sg-02354d9951dc44562",
            "dhcp_options_id": "dopt-0627bbfe644ed73dd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038e9f73f3c630665",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ff29532512ec906",
            "owner_id": "703671893205",
            "tags": {
              "Name": "prod-main"
            },
            "tags_all": {
              "Name": "prod-main"
            }
          },
          "dependencies": [
            "aws_ecr_repository.payments",
            "aws_ecr_repository.users"
          ]
        }
      ]
    }
  ]
}